[tool.poetry]
name = "jon-aland-karikko-mapping"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10.0"
kapalo-py = {path = "./kapalo-py", develop = true}
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
